--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,9 +13,20 @@ phases:
       - docker push $REPOSITORY_URI:$IMAGE_TAG
       - docker push $REPOSITORY_URI:$CODEBUILD_BUILD_NUMBER
       - printf '[{"name":"simplehttp-container","imageUri":"%s"}]' $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
+      - printf '{"ImageURI":"%s"}' $REPOSITORY_URI_IMAGE:$IMAGE_TAG > imageDetail.json
 artifacts:
   files:
-    - imagedefinitions.json
+    - image*.json
+    - appspec.yaml
+    - taskdef.json
+  secondary-artifacts:
+    DefinitionArtifact:
+      files:
+        - appspec.yaml
+        - taskdef.json
+    ImageArtifact:
+      files:
+        - imageDetail.json
 
 cache:
   paths:
