--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,12 +2,12 @@ version: 0.2
 
 env:
   variables:
-    GIT_COMMIT_SHA: '${CODEBUILD_RESOLVED_SOURCE_VERSION}'
+    GIT_COMMIT_SHA: $CODEBUILD_RESOLVED_SOURCE_VERSION
 
 phases:
   pre_build:
     commands:
-      - echo $GIT_COMMIT_SHA
+      - echo 'VARIABLE $GIT_COMMIT_SHA'
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
   build:
     commands:
