--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,6 +8,7 @@ phases:
   pre_build:
     commands:
       - echo 'VARIABLE $GIT_COMMIT_SHA'
+      - echo $CODEBUILD_RESOLVED_SOURCE_VERSION
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
   build:
     commands:
